# lgp

./: Cargo.toml  README.md  entropy.py
benches/: benchmarks.rs  program_benchmarks.rs
src/: lib.rs  main.rs
src/archived_modules/population/: fitness.rs
src/population/: fitness.rs  mod.rs  utilities.rs
src/program/: instruction.rs  mod.rs  operator.rs
