[package]
name = "lgp"
version = "0.1.0"
edition = "2021"

[lib]
name = "lgp"
path = "src/lib.rs"

[[bin]]
name = "lgp_cli"
path = "src/main.rs"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "program_benchmarks"
harness = false

[profile.release]
debug = true

[dependencies]
rand = "0.9.0"
